tests/compile/dup_alias.stderr
error: Alias "my_fn" is already defined
 --> tests/compile/dup_alias.rs:6:34
  |
6 |     my_fn = concat(gork, _, bork),
  |                                  ^

error[E0425]: cannot find function `foo_baz` in this scope
  --> tests/compile/dup_alias.rs:15:16
   |
15 |     assert_eq!(foo_baz(), 42);
   |                ^^^^^^^ not found in this scope
